# OCRAssistant

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt  main.cpp
include/ocrassistant/: OCRAssistant.h
lib/: CMakeLists.txt
lib/include/: IOCRProvider.h  OCRReader.h  TesseractOCRProvider.h
lib/src/: OCRReader.cpp
lib/test/: CMakeLists.txt  OCRReaderTests.cpp  TesseractOCRProviderTests.cpp
src/: main.cpp
